# python-opengl

./: README.md
example/: draw_cube.py  example1.py
glEngine_workspace/: pyproject.toml
glEngine_workspace/src/glEngine.egg-info/: PKG-INFO
glEngine_workspace/src/glEngine/buffer/: CameraBuffer.py  MeshBuffer.py  ShaderBuffer.py  __init__.py
glEngine_workspace/src/glEngine/buffer/screen/: glfwScreen.py
glEngine_workspace/src/glEngine/helper/: MathHelper.py  MeshHelper.py  __init__.py  glHelper.py
glEngine_workspace/src/glEngine/manager/: __init__.py
glEngine_workspace/src/glEngine/model/: Engine.py
glEngine_workspace/src/glEngine/resource/shader/: basicShader.vert
src/glEngine/: __init__.py  enums.py
src/glEngine.egg-info/: SOURCES.txt  requires.txt
src/glEngine/buffer/: ScreenBuffer.py
src/glEngine/manager/: ResourceManager.py
src/glEngine/model/: Mesh.py  __init__.py
src/glEngine/resource/shader/: basicShader.frag
